# color_tools

./: .gitignore  CMakeLists.txt  README.md  package.xml  version.cmake
action/: FindWipe.action  GuiRun.action
color_blob_centroid/: CMakeLists.txt  README.md  package.xml
color_blob_centroid/include/color_blob_centroid/: ColorBlobCentroid.h
color_blob_centroid/launch/: colorblob.launch.py
color_blob_centroid/src/: CentroidClient.cpp  ColorBlobCentroid.cpp
color_names/: CMakeLists.txt  package.xml
color_names/include/color_names/: ColorNameLut.h
color_names/test/: version.cpp
color_tools_msgs/: CMakeLists.txt  README.md  package.xml
color_tools_msgs/action/: FindWipe.action
color_tools_msgs/srv/: BlobCentroid.srv  BlobDimensions.srv
include/color_blob_centroid/: ColorBlobCentroid.h  DebugCentroid.h
include/color_names/: ColorNameLut.h  ColorNames.h
include/velcro-centroid/: ColorBlobCentroid.h  DebugCentroid.h  VelcroCentroid.h
launch/: colorblob.launch.py  debug.launch.py  silent.launch.py
src/: CentroidClient.cpp  ColorBlobCentroid.cpp  ColorNames.cpp  DebugCentroid.cpp  VelcroCentroid.cpp
srv/: BlobCentroid.srv  BlobDimensions.srv  VelcroDimensions.srv
test/: color_image.cpp  color_mask.cpp  reorder_lut.cpp  version.cpp
